--- a/style.css
+++ b/style.css
@@ -1,2 +1,11 @@
 html, body { height: 100%; width: 100%; margin: 0;}
-#whale {height: 99.5%; width: 100%;}
+#background-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+#whale {height: 99.5%; width: 100%; position: relative; z-index: 1;}
